# website_management

./: SETUP_GUIDE.md  pyproject.toml  requirements.txt  setup.py
paideia_cms/: hooks.py  install.py  modules.txt  seed_data.py
paideia_cms/api/: pages.py
paideia_cms/paideia_cms/doctype/paideia_bulk_content_generator/: paideia_bulk_content_generator.js  paideia_bulk_content_generator.json  paideia_bulk_content_generator.py
paideia_cms/paideia_cms/doctype/paideia_bulk_upload_item/: paideia_bulk_upload_item.json  paideia_bulk_upload_item.py
paideia_cms/paideia_cms/doctype/paideia_cms_settings/: paideia_cms_settings.json  paideia_cms_settings.py
paideia_cms/paideia_cms/doctype/paideia_content_generator/: paideia_content_generator.js  paideia_content_generator.json  paideia_content_generator.py
paideia_cms/paideia_cms/doctype/paideia_page_section/: paideia_page_section.json  paideia_page_section.py
paideia_cms/paideia_cms/doctype/paideia_site_config/: paideia_site_config.json  paideia_site_config.py
paideia_cms/paideia_cms/doctype/paideia_testimonial/: paideia_testimonial.json  paideia_testimonial.py
paideia_cms/paideia_cms/doctype/paideia_web_page/: paideia_web_page.json  paideia_web_page.py
paideia_cms/utils/: content_generator.py  document_extractor.py
